# strategy_runner

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  daily_tasks.py  docker-compose.yml  eod_tasks.py  main.py  pyproject.toml  setup.cfg  sod_tasks.py
alembic/: env.py
alembic/versions/: 2025-07-17_3c60e1eb9e22_add_index_constituent_table.py  2025-07-17_64a53d31e67d_add_unique_constraint.py  2025-07-17_755366b87e83_add_index_constituent_table.py  2025-07-19_2f629b39802c_add_index_constituent_table_and_snapshot.py  2025-07-21_21db97d959ec_drop_duplicate_snapshot_date_from_index_.py  2025-07-21_6145b04d3763_add_index_constituent_index_snapshot_.py  2025-07-21_c8535df47fd1_add_ohlcv_daily_table.py  2025-07-22_7176b84e4f08_intial_migration_script_to_create_all_.py  2025-07-28_267e9278ad28_create_technical_indicator_table.py  2025-08-01_8eeeccdb2e9b_create_missing_ohlcv_data_event_table.py  2025-08-03_776a788e56c7_add_metadata_fields_to_security_table.py  2025-08-09_2b4e0b2b01dd_add_eod_signal_table_for_persisting_.py  2025-08-11_5f0b84200f21_update_eod_signal_table_drop_notes_add_.py  2025-08-13_cbf5964bc08f_add_strategy_id_to_eodsignals_to_match_.py  2025-09-01_569df8fd1a46_add_back_test_runner_models.py  2025-09-02_10fb02b2f344_add_back_test_trade_model.py  2025-09-05_d36b178b9d53_rename_strategy_id_signal_strategy_id_.py  2025-09-09_a90dbb2593fd_update_backtest_trade_constraint_to_.py  2025-09-10_53664280e60e_add_region_to_securities_default_to_us.py  2025-09-11_cc1fc9133a6b_add_symbol_constraint_to_securities.py  2025-10-31_d631858e0aad_add_new_technical_indicator_columns.py
app/core/: db.py  orm_mixins.py  settings.py
app/handlers/: backtest_run.py  backtest_trade.py  eod_signal.py  eod_signal_handler.py  (+6 more)
migration/: README.md  create_tables.py
scripts/: remove-cron.sh  run_eod_tasks.sh  setup_cron.sh
strategy_configs/: sma_pullback_buy.json
tests/: conftest.py
(+106 files in other folders)
