[flake8]
enable_extensions = T001
max-line-length = 120
select = B,C,E,F,W,T4,B9
per-file-ignores = __init__.py:F401, create_tables.py:F401
ignore=W503, B008, B902, B905, E203
format = pylint
show-source = True
max-complexity = 10
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    venv

[mypy]
plugins = sqlalchemy.ext.mypy.plugin
ignore_missing_imports = True
exclude = ['alembic']

[tool:pytest]
testpaths = tests
python_functions = test_*
python_files = test*.py

[tool:isort]
profile = black
lines_between_types = 1
combine_as_imports = true
line_length = 88

[tool.poetry.dependencies]
python = "^3.9"
types-python-dateutil = "*"
types-requests = "*"

[tool.pycln]
all = true
